refactor: redirect, forward의 책임을 JspView에게 할당함